--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,11 @@
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
-    "googleapis": "^34.0.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.18",
     "morgan": "~1.9.0",
-    "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0",
-    "rarbg-api-ts": "^1.0.22",
-    "tvmaze-api-ts": "^1.0.20"
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
