--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,21 @@
 {
   "compilerOptions": {
-    "baseUrl": "./bin/www",
-    "target": "es6",
-    "module": "commonjs"
-  }
+      "target": "es6",
+      "module": "commonjs",
+      "outDir": "dist",
+      "sourceMap": true,
+      "baseUrl": ".",
+      "paths": {
+          "*": [
+              "node_modules/*",
+              "src/types/*"
+          ]
+      }
+  },
+  "include": [
+      "src/**/*"
+  ],
+  "exclude": [
+      "node_modules"
+  ]
 }
