--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "prettyjson": "1.2.1",
     "pug": "2.0.3",
     "register-service-worker": "^1.0.0",
+    "socket.io-client": "^2.1.1",
+    "socket.io-p2p": "^2.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuesax": "^3.7.1",
@@ -23,6 +25,8 @@
   },
   "devDependencies": {
     "@mpva/vue-cli-plugin-express": "^1.0.1",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/socket.io-p2p": "^2.2.0",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-plugin-pwa": "^3.0.3",
@@ -51,6 +55,10 @@
     ],
     "parserOptions": {
       "parser": "typescript-eslint-parser"
+    },
+    "rules": {
+      "vue/require-v-for-key": "off",
+      "vue/valid-v-for": "off"
     }
   },
   "postcss": {
