--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,16 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.18",
     "morgan": "~1.9.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "socket.io": "^2.1.1",
+    "socket.io-p2p-server": "^1.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/mongoose": "^5.2.17",
     "@types/node": "^10.10.3",
     "@types/passport": "^0.4.6",
+    "@types/socket.io": "^2.1.0",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.0.3"
