--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "socket.io-p2p": "^2.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-scroll": "^2.1.9",
     "vuesax": "^3.7.1",
     "vuex": "^3.0.1"
   },
