--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@mpva/vue-cli-plugin-express": "^1.0.1",
     "@types/socket.io-client": "^1.4.32",
     "@types/socket.io-p2p": "^2.2.0",
+    "@vue/cli": "^3.1.1",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-plugin-pwa": "^3.0.3",
