--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "taiga",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd client && npm i && npm run build && cd ../server && npm i && tsc && node dist/bin/www"
+    "postinstall": "cd client && npm i && npm run build",
+    "start": "cd server && tsc && node dist/bin/www"
   },
   "author": "",
   "license": "ISC"
