--- a/client/package.json
+++ b/client/package.json
@@ -22,13 +22,13 @@
     "vue-router": "^3.0.1",
     "vue-scroll": "^2.1.9",
     "vuesax": "^3.7.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "@vue/cli": "^3.1.1"
   },
   "devDependencies": {
     "@mpva/vue-cli-plugin-express": "^1.0.1",
     "@types/socket.io-client": "^1.4.32",
     "@types/socket.io-p2p": "^2.2.0",
-    "@vue/cli": "^3.1.1",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-plugin-pwa": "^3.0.3",
