--- a/client/package.json
+++ b/client/package.json
@@ -23,17 +23,17 @@
     "vue-scroll": "^2.1.9",
     "vuesax": "^3.7.1",
     "vuex": "^3.0.1",
-    "@vue/cli": "^3.1.1"
+    "@vue/cli": "^3.1.1",
+    "@vue/cli-service": "^3.1.3"
   },
   "devDependencies": {
     "@mpva/vue-cli-plugin-express": "^1.0.1",
     "@types/socket.io-client": "^1.4.32",
     "@types/socket.io-p2p": "^2.2.0",
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-plugin-eslint": "^3.0.3",
-    "@vue/cli-plugin-pwa": "^3.0.3",
-    "@vue/cli-plugin-typescript": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-eslint": "^3.1.4",
+    "@vue/cli-plugin-pwa": "^3.1.1",
+    "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/eslint-config-typescript": "^3.1.0",
     "babel-eslint": "^10.0.1",
