--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "socket.io": "^2.1.1",
-    "socket.io-p2p-server": "^1.2.0"
+    "socket.io-p2p-server": "^1.2.0",
+    "typescript": "^3.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
@@ -28,7 +29,6 @@
     "@types/passport": "^0.4.6",
     "@types/socket.io": "^2.1.0",
     "tslint": "^5.11.0",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.0.3"
+    "tslint-config-standard": "^8.0.1"
   }
 }
