--- a/client/package.json
+++ b/client/package.json
@@ -24,17 +24,17 @@
     "vuesax": "^3.7.1",
     "vuex": "^3.0.1",
     "@vue/cli": "^3.1.1",
-    "@vue/cli-service": "^3.1.3"
-  },
-  "devDependencies": {
-    "@types/socket.io-client": "^1.4.32",
-    "@types/socket.io-p2p": "^2.2.0",
+    "@vue/cli-service": "^3.1.3",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.4",
     "@vue/cli-plugin-pwa": "^3.1.1",
     "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/eslint-config-typescript": "^3.1.0",
+    "@vue/eslint-config-typescript": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/socket.io-client": "^1.4.32",
+    "@types/socket.io-p2p": "^2.2.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
