--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "@vue/cli-plugin-pwa": "^3.1.1",
     "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/eslint-config-typescript": "^3.1.0"
+    "@vue/eslint-config-typescript": "^3.1.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "devDependencies": {
     "@types/socket.io-client": "^1.4.32",
@@ -41,8 +42,7 @@
     "lint-staged": "^7.2.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "typescript": "^3.0.0"
   },
   "eslintConfig": {
     "root": true,
