--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^3.1.1",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-eslint": "^3.1.4",
+    "@vue/cli-plugin-pwa": "^3.1.1",
+    "@vue/cli-plugin-typescript": "^3.1.1",
+    "@vue/cli-service": "^3.1.3",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-typescript": "^3.1.0",
     "body-parser": "1.18.3",
     "colors": "1.1.2",
     "cookie-parser": "1.4.3",
@@ -21,17 +29,9 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-scroll": "^2.1.9",
+    "vue-template-compiler": "^2.5.17",
     "vuesax": "^3.7.1",
-    "vuex": "^3.0.1",
-    "@vue/cli": "^3.1.1",
-    "@vue/cli-service": "^3.1.3",
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.4",
-    "@vue/cli-plugin-pwa": "^3.1.1",
-    "@vue/cli-plugin-typescript": "^3.1.1",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/eslint-config-typescript": "^3.1.0",
-    "vue-template-compiler": "^2.5.17"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@types/socket.io-client": "^1.4.32",
