--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "taiga",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd server && tsc && node dist/bin/www"
+    "start": "cd client && vue-cli-service build && cd .. && cd server && tsc && node dist/bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -26,7 +26,39 @@
     "@types/socket.io": "^2.1.0",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.0.3"
+    "typescript": "^3.0.3",
+    "body-parser": "1.18.3",
+    "colors": "1.1.2",
+    "cookie-parser": "1.4.3",
+    "material-icons": "^0.2.3",
+    "morgan": "1.8.1",
+    "prettyjson": "1.2.1",
+    "pug": "2.0.3",
+    "register-service-worker": "^1.0.0",
+    "socket.io-client": "^2.1.1",
+    "socket.io-p2p": "^2.2.0",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vue-scroll": "^2.1.9",
+    "vuesax": "^3.7.1",
+    "vuex": "^3.0.1",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/socket.io-p2p": "^2.2.0",
+    "@vue/cli": "^3.1.1",
+    "@vue/cli-plugin-babel": "^3.0.3",
+    "@vue/cli-plugin-eslint": "^3.0.3",
+    "@vue/cli-plugin-pwa": "^3.0.3",
+    "@vue/cli-plugin-typescript": "^3.0.3",
+    "@vue/cli-service": "^3.0.3",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-typescript": "^3.1.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0-0",
+    "lint-staged": "^7.2.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.17"
   },
   "author": "",
   "license": "ISC"
