+ push dist for heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "taiga",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd client && npm run build && cd .. && cd server && tsc && node dist/bin/www"
+    "start": "cd server && tsc && node dist/bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
