--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "socket.io-client": "^2.1.1",
     "socket.io-p2p": "^2.2.0",
     "vue": "^2.5.17",
+    "vue-class-component": "^6.3.2",
     "vue-router": "^3.0.1",
     "vue-scroll": "^2.1.9",
     "vuesax": "^3.7.1",
